[package]
name = "vixi"
version = "0.1.0"
authors = ["Jake Askeland <jake.askeland@gmail.com>"]

[dependencies]
futures = "0.1"
regex = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
xrl = { git = "https://github.com/xi-frontend/xrl.git" }

[dependencies.nom]
version = "^3.2"
features = ["regexp"]
